syntax = "proto3";
package pb;

import "common.proto";

// 报单ID
message CTPOrderID {
  int64 front_id = 1;
  int64 session_id = 2;
  int64 order_ref = 3;
  string string_id = 4;
}

// 方向
enum CTPDirection {
  LONG = 0;
  SHORT = 1;
}

// 状态
enum CTPOrderStatus {
  // 完全成交
  CTP_OS_DONE = 0;
  // 部分成交还在队列中
  CTP_OS_PENDING_WITH_PARTIAL_DONE = 1;
  // 部分成交且已撤单
  CTP_OS_CANCELED_WITH_PARTIAL_DONE = 2;
  // 队列中
  CTP_OS_PENDING = 3;
  // 已经撤单
  CTP_OS_CANCELED = 4;
  // 未知
  CTP_OS_UNKOWN = 5;
}

enum CTPPriceType {
  // 限价
  LIMIT_PRICE = 0;
  // 市价
  MARKET_PRICE = 1;
  // 最优价
  BEST_PRICE = 2;
  // 最新价
  LAST_PRICE = 3;
}

enum CTPOffsetFlag {
  NONE = 0;
  // 开仓
  OPEN = 1;
  // 平仓
  CLOSE = 2;
  // 强平
  FORCE_CLOSE = 3;
  // 平今
  CLOSE_TODAY = 4;
  // 平昨
  CLOSE_YESTERDAY = 5;
}

// 投机套保标志
enum CTPHedgeType {
  // 投机
  SPECULATION = 0;
  // 套利
  ARBITRAGE = 1;
  // 套保
  HEDGE = 2;
}

// 成交类型
enum CTPTradeType {
  // 普通成交
  NORMAL = 0;
  // 期权执行
  OPTIONS_EXECUTION = 1;
  // OTC成交
  OTC = 2;
  // 期转现衍生成交
  EFP_DERIVED = 3;
  // 组合衍生成交
  COMBINATION_DERIVED = 4;
  // 交割平仓
  DELIVERY_CLOSE = 5;
  // 结算衍生
  SETTLEMENT_DERIVED = 6;
  // 分红股票
  PLACEMENT_DERIVED = 7;
}

// 委托
message CTPOrderField {
  string broker_id = 1;
  string investor_id = 2;
  string instrument_id = 3;
  string order_ref = 4;
  string user_id = 5;
  int32 order_price_type = 6;
  int32 direction = 7;
  int32 comb_offset_flag = 8;
  int32 comb_hedge_flag = 9;
  double limit_price = 10;
  int32 volume_total_original = 11;
  int32 time_condition = 12;
  string GTD_date = 13;
  int32 volume_condition = 14;
  int32 min_volume = 15;
  int32 contingent_condition = 16;
  double stop_price = 17;
  int32 force_close_reason = 18;
  bool is_auto_suspend = 19;
  string business_unit = 20;
  int32 request_id = 21;
  string order_local_id = 22;
  string exchange_id = 23;
  string participant_id = 24;
  string client_id = 25;
  string exchange_inst_id = 26;
  string trader_id = 27;
  int32 install_id = 28;
  int32 order_submit_status = 29;
  int32 notify_sequence = 30;
  int32 trading_day = 31;
  int32 settlement_id = 32;
  string order_sys_id = 33;
  int32 order_source = 34;
  int32 order_status = 35;
  int32 order_type = 36;
  int32 volume_traded = 37;
  int32 volume_total = 38;
  string insert_date = 39;
  string insert_time = 40;
  string active_time = 41;
  string suspend_time = 42;
  string update_time = 43;
  string cancel_time = 44;
  string active_trader_id = 45;
  string clearing_part_id = 46;
  int32 sequence_no = 47;
  int32 front_id = 48;
  int32 session_id = 49;
  string user_product_info = 50;
  bytes status_msg = 51;
  bool user_force_close = 52;
  string active_user_id = 53;
  int32 broker_order_seq = 54;
  string relative_order_sys_id = 55;
  int32 ZCE_total_traded_volume = 56;
  bool is_swap_order = 57;
  string branch_id = 58;
  string invest_unit_id = 59;
  string account_id = 60;
  string currency_id = 61;
  string IP_address = 62;
  string Mac_address = 63;
}

message CTPOrderList { repeated CTPOrderField list = 1; }

message CTPOrderLink {
  CTPOrderField parent = 1;
  repeated CTPOrderField children = 2;
}

// 发送撤单请求
message CTPCancelOrderRequest {
  // 帐户
  string account_id = 1;
  // 委托编号
  CTPOrderID CTPOrderID = 2;
  // 合约
  Symbol symbol = 3;
  // 请求id
  int32 request_id = 4;
  // 发起前置
  int32 front_id = 5;
  // 发起session
  int32 session_id = 6;
  // 发起终端信息
  string exchange_order_id = 7;
  // token
  string token = 8;
  // router account id
  string route_account_id = 9;
}

message CTPOnRtnCancelOrder {
  string account_id = 1;
  CTPOrderID order_id = 2;
  string exchange_order_id = 3;
  Symbol symbol = 4;
  int32 request_id = 5;
  int32 error_type = 6;
  int32 error = 7;
  string msg = 8;
  string route_account_id = 9;
}

// 成交
message CTPTradeField {
  string broker_id = 1;
  string investor_id = 2;
  string instrument_id = 3;
  string order_ref = 4;
  string user_id = 5;
  string exchange_id = 6;
  string trade_id = 7;
  int32 direction = 8;
  string order_sys_id = 9;
  string participant_id = 10;
  string client_id = 11;
  int32 trading_role = 12;
  string exchange_inst_id = 13;
  int32 offset_flag = 14;
  int32 hedge_flag = 15;
  double price = 16;
  int32 volume = 17;
  string trade_date = 18;
  string trade_time = 19;
  int32 trade_type = 20;
  int32 price_source = 21;
  string trader_id = 22;
  string order_local_id = 23;
  string clearing_part_id = 24;
  string business_unit = 25;
  int32 sequence_no = 26;
  int32 trading_day = 27;
  int32 settlement_id = 28;
  int32 broker_order_seq = 29;
  int32 trade_source = 30;
  string invest_unit_id = 31;
}

message CTPTradeReportList { repeated CTPTradeField list = 1; }

// 持仓统计
message CTPPositionSummation {
  // 方向
  CTPDirection direction = 1;
  // 类型
  int32 type = 2;
  // 路由分组
  string route_account_id = 3;
  // 持仓
  int32 position = 4;
  // 金额
  double amount = 5;
  // 成本
  double cost = 6;
  // 冻结
  int32 frozen = 7;
  // 可用
  int32 available = 8;
  // 盈亏
  double position_profit = 9;
  // 平盈
  double closed_profit = 10;
  // 保证金
  double margin = 11;
  // 冻结保证金
  double frozen_margin = 12;
  // 手续费
  double commission = 13;
  // 冻结手续费
  double frozen_commission = 14;
  // 利息
  double interest = 15;
  // 冻结利息
  double frozen_interest = 16;
  // 盯市盈亏
  double mtm_profit = 17;
  // 进入清算的平仓盈亏
  double cleared_closed_profit = 18;
}

// 持仓
message CTPPosition {
  /// 合约编号
  Symbol symbol = 1;
  // 统计
  CTPPositionSummation summation = 2;
  // 今仓
  CTPPositionSummation today_summation = 3;
  // 今仓
  CTPPositionSummation yesterday_summation = 4;
  // 昨结算
  double pre_settlement_price = 5;
  // 今结算
  double settlement_price = 6;
  // 最新价
  double last_price = 7;
  // 交易日
  int32 trading_day = 8;
  // 交易品种类型
  int32 product_type = 9;
  // 合约乘数
  int32 volume_multiple = 11;
  // 产品
  ProductID product_id = 12;
  // 最小变动价位
  double price_tick = 13;
  // 名称
  string symbol_name = 14;
  // 账号
  string account_id = 15;
}

message CTPPositionList { repeated CTPPosition list = 1; }

// 平仓明细.
message CTPCloseTradeRecord {
  // 帐号
  string account_id = 1;
  // 合约
  Symbol symbol = 2;
  // 方向
  CTPDirection direction = 3;
  // 数量
  int32 open_volume = 4;
  // 开仓金额
  double open_amount = 5;
  // 平仓数量
  int32 closed_volume = 6;
  // 平仓金额
  double closed_amount = 7;
  // 开仓时间
  int64 open_time = 8;
  // 开仓交易日
  int32 open_trading_day = 9;
  // 开仓委托单号
  CTPOrderID open_order_id = 10;
  // 开仓成交编号
  string open_trade_id = 11;
  // 开仓成交类型
  int32 open_trade_type = 12;
  // 开仓投机套保类型
  int32 open_hedge_type = 13;
  // 平仓时间
  int64 close_time = 14;
  // 平仓交易日
  int32 close_trading_day = 15;
  // 平仓委托单号
  CTPOrderID close_order_id = 16;
  // 平仓成交编号
  string close_trade_id = 17;
  // 平仓成交类型
  int32 close_trade_type = 18;
  // 平仓投机套保类型
  int32 close_hedge_type = 19;
  // 平仓盈亏
  double close_profit = 20;
  // 昨结
  double pre_settlement_price = 21;
  // 币种
  CurrencyType currency_type = 22;
  // 开仓手续费
  double open_commission = 23;
  // 平仓手续费
  double close_commission = 24;
  // 保证金占用
  double margin = 25;
  // 初始开仓金额
  double initial_open_amount = 26;
  // 合约乘数
  int32 volume_multiple = 27;
  // 冻结利息
  double frozen_interest = 28;
  // 上游账户
  string route_account_id = 29;
  // 持仓盈亏
  double position_profit = 30;
}

message CTPCloseTradeRecordList { repeated CTPCloseTradeRecord list = 1; }

// 保证金率
message CTPMarginRate {
  // 交易所
  ExchangeType exchange = 1;
  // symbol
  string symbol = 2;
  // product
  string product = 3;
  /// 多头保证金率（按手数)
  double long_by_volume = 4;
  /// 多头保证金率（按金额)
  double long_by_amount = 5;
  /// 空头保证金率（按手数)
  double short_by_volume = 6;
  /// 空头保证金率（按金额)
  double short_by_amount = 7;
  // uid
  int64 id = 10;
}

// CTPMarginItem
message CTPMarginItem {
  /// 多头保证金率（按手数)
  double long_by_volume = 1;
  /// 多头保证金率（按金额)
  double long_by_amount = 2;
  /// 空头保证金率（按手数)
  double short_by_volume = 3;
  /// 空头保证金率（按金额)
  double short_by_amount = 4;
}

// 手续费
message CTPCommissionRateItem {
  double by_amount = 1;
  double by_volume = 2;
  double minimum = 3;
  CTPOffsetFlag offset_flag = 4;
  string tag = 5;
}

// 手续费率
message CTPCommissionRate {
  // 交易所
  ExchangeType exchange = 1;
  // symbol
  string symbol = 2;
  // product
  string product = 3;
  // 设置
  repeated CTPCommissionRateItem settings = 4;
  // ID
  int64 id = 5;
}

// 交易单元
message CTPTradingUnit {
  /// 合约编号
  Symbol symbol = 1;
  // 统计
  repeated CTPPosition position = 2;
  // 报单
  repeated CTPOrderLink order_link_list = 3;
  // 持仓明细
  repeated CTPCloseTradeRecord position_detail_list = 4;
  // 平仓明细
  repeated CTPCloseTradeRecord history_ctr_list = 5;
  // 历史单
  repeated CTPOrderField history_order_list = 6;
  // 成交
  repeated CTPTradeField history_trade_list = 7;
  // 最新价
  double last_price = 10;
  // 行情更新时间
  int64 last_mds_update_time = 11;
  // 合约信息
  double price_tick = 12;
  // 合约乘数
  int32 volume_multiple = 13;
  // 手续费
  CTPCommissionRate cr = 14;
  // 保证金
  CTPMarginRate mr = 15;
}

message CTPForceCloseTimeRule {
  int64 start = 1;
  int64 end = 2;
  int64 disable_open_start = 3;
}

// CTPTradingUnitOption 品种参数
message CTPTradingUnitOption {
  // 涨跌停N点内禁止开仓
  int32 limit_price_disable_open = 1;
  // 涨跌停N点内强制平仓
  int32 limit_price_force_close = 2;
  // 昨持仓阀值
  double pre_position_percentage_threshold = 3;
  // 昨持仓绝对数量阀值
  double pre_position_threshold = 4;
  // 昨成交占比阀值
  double pre_volume_percentage_threshold = 5;
  // 昨成交量绝对数量阀值
  double pre_volume_threshold = 6;
  // 单资产持仓限制
  double single_product_margin_weight_limit = 7;
  // 开始时间
  repeated CTPForceCloseTimeRule fcr_list = 8;
  // 禁止开仓
  bool disable_open = 9;
  // 手续费
  repeated CTPCommissionRateItem cr_settings = 10;
  // 保证金
  CTPMarginItem margin_rate = 11;
  // 止损点数
  repeated int32 stoploss_candidates = 12;
  // 止赢点数
  repeated int32 take_profit_candidates = 13;
  // 手数
  repeated int32 volume_candidates = 14;
  // 禁止开仓
  repeated string disable_open_symbol_list = 15;
  // 禁止开仓
  repeated string disable_open_class_list = 16;
  // 上市<N天的品种禁止开仓
  int32 open_days_limit = 17;
}

// 隔夜自有资金检查.
message MarginCheckRule {
  // 开始时间
  int64 start = 1;
  // 结束时间
  int64 end = 2;
  // 平仓顺序
  int32 force_close_order = 3;
  // 报警
  double warning_level = 4;
  // 强平
  double force_close_level = 5;
  // 自有可用倍率
  double common_balance_multiple = 6;
  // 报警线下禁止开仓
  bool disable_open_under_warning_level = 7;
  // 按比例报警
  double warning_level_by_prefer_ratio = 8;
  // 按比例强平
  double force_close_level_by_prefer_ratio = 9;
  // 报警按市值比例
  double warning_level_by_margin = 10;
  // 强平按市值比例
  double force_close_level_by_margin = 11;
  // 总持仓占用上限
  double margin_ceiling = 12;
  // 买入金额上限
  double position_amount_ceiling = 13;
}

// SettlementUnitOption 结算组参数
message SettlementUnitOption {
  // ID
  int64 id = 1;
  // 备注
  string comment = 2;
  // 结算组
  int32 settlement_group = 3;
  // 资金检查水平
  int32 available_check_level = 4;
  // 强平开启
  bool force_close_on = 5;
  // 强平检查
  repeated MarginCheckRule mcr_list = 6;
  // 禁止开仓
  bool disable_open = 7;
}

// 普通结算
message CTPTradingAccount {
  // 合计
  AccountMoneySummary summary = 1;
  // 出入金
  repeated MoneyTransferRecord mtr_list = 2;
  // 交易明细
  repeated CTPTradingUnit tu_list = 3;
  // 最后结算日期
  int32 last_settle_date = 4;
  // 设置
  SettlementUnitOption options = 5;
}

// 账户快照
message CTPTradingAccountSnapshot {
  // 账户
  CTPTradingAccount account = 1;
  // 快照时间
  int64 time = 2;
  // 快照备注
  string comment = 3;
}

// CTP常规性返回
message CTPRspInfo {
  int32 error_id = 1;
  bytes error_msg = 2;
  int32 request_id = 3;
  bool is_last = 4;
}

// 请求查询注册账户
message CtpReqQryAccountRegister {
  string broker_id = 1;
  string account_id = 2;
  string bank_id = 3;
  string bank_branch_id = 4;
  string currency_id = 5;
}

// 查询注册账户响应
message CtpRspQryAccountRegister {
  int32 error_id = 1;
  string error_msg = 2;
  int32 request_id = 3;
  bool is_last = 4;
  string trading_day = 5;
  string bank_id = 6;
  string bank_branch_id = 7;
  string bank_account = 8;
  string broker_id = 9;
  string broker_branch_id = 10;
  string account_id = 11;
  int32 id_card_type = 12;
  string identified_card_no = 13;
  string customer_name = 14;
  string currency_id = 15;
  int32 open_or_destory = 16;
  string reg_date = 17;
  string out_date = 18;
  int32 tid = 19;
  int32 cust_type = 20;
  int32 bank_acc_type = 21;
  string long_customer_name = 22;
}

// 认证
message CtpReqAuthencate {
  string auth_code = 1;
  string product = 2;
}

// 认证结果
message CtpRspAuthencate {
  int32 error_id = 1;
  string error_msg = 2;
  int32 request_id = 3;
  bool is_last = 4;
  string broker_id = 5;
  string user_id = 6;
  string user_product_info = 7;
}

// 登陆
message CtpReqUserLogin {
  string broker_id = 1;
  string account = 2;
  string password = 3;
}

// 登陆返回
message CtpRspUserLogin {
  int32 error_id = 1;
  string error_msg = 2;
  int32 request_id = 3;
  bool is_last = 4;
  string trading_day = 5;
  string login_time = 6;
  string broker_id = 7;
  string user_id = 8;
  string system_name = 9;
  int32 front_id = 10;
  int32 session_id = 11;
  string max_order_ref = 12;
  string shfe_time = 13;
  string dce_time = 14;
  string czce_time = 15;
  string cffex_time = 16;
  string ine_time = 17;
}

// 连接
message CtpReqConnect {
  string address = 1;
  string account = 2;
  string directory = 3;
}

// 前置连接
message CtpOnFrontConnected {}

// 前置断开
message CtpOnFrontDisconnected {}

// 确认结算
message CtpReqSettlementInfoConfirm {
  string broker_id = 1;
  string investor_id = 2;
}

// 确认结算返回
message CtpOnRspSettlementInfoConfirm {
  int32 error_id = 1;
  string error_msg = 2;
  int32 request_id = 3;
  bool is_last = 4;
  string broker_id = 5;
  string investor_id = 6;
  string confirm_date = 7;
  string confirm_time = 8;
  int32 settlement_id = 9;
  string account_id = 10;
  string currency_id = 11;
}

// 查询投资者
message CtpReqQryInvestor {}

// 返回查询投资者
message CtpRspQryInvestor {
  int32 error_id = 1;
  string error_msg = 2;
  int32 request_id = 3;
  bool is_last = 4;
  string investor_id = 5;
  string broker_id = 6;
  string investor_group_id = 7;
  string investor_name = 8;
  int32 identified_card_type = 9;
  string identified_card_no = 10;
  bool is_active = 11;
  string telphone = 12;
  string address = 13;
  string open_date = 14;
  string mobile = 15;
}

// 查询银行
message CtpReqQryTransferBank {
  string broker_id = 1;
  string investor_id = 2;
}

// 返回查询银行
message CtpRspQryTransferBank {
  int32 error_id = 1;
  string error_msg = 2;
  int32 request_id = 3;
  bool is_last = 4;
  string broker_id = 5;
  string bank_id = 6;
  string bank_branch_id = 7;
  string bank_name = 8;
}

// 银行转期货
message CtpReqTransfer {
  string trade_code = 1;
  string bank_id = 2;
  string bank_branch_id = 3;
  string broker_id = 4;
  string broker_branch_id = 5;
  string trade_date = 6;
  string trade_time = 7;
  string bank_serial = 8;
  string trading_day = 9;
  int32 plate_serieal = 10;
  string last_fragment = 11;
  int32 session_id = 12;
  string customer_name = 13;
  int32 id_card_type = 14;
  string identified_card_no = 15;
  string cust_type = 16;
  string bank_account = 17;
  string bank_password = 18;
  string account_id = 19;
  string password = 20;
  int32 install_id = 21;
  int32 future_serial = 22;
  string user_id = 23;
  string verify_cert_no_flag = 24;
  string currency_id = 25;
  double trade_amount = 26;
  double future_fetch_amount = 27;
  int32 fee_pay_flag = 28;
  double cust_fee = 29;
  double broker_fee = 30;
  string message = 31;
  string digest = 32;
  int32 bank_acc_type = 33;
  string device_id = 34;
  string bank_secu_acc = 35;
  string bank_pwd_flag = 36;
  string secu_pwd_flag = 37;
  string oper_no = 38;
  int32 request_id = 39;
  int32 tid = 40;
  string transfer_status = 41;
  string long_customer_name = 42;
}

// 返回银行转期货
message CtpRspTransfer {
  int32 error_id = 1;
  string error_msg = 2;
  int32 request_id = 3;
  bool is_last = 4;
  CtpReqTransfer req = 5;
}

message CTPReqSubscribeMarketData { repeated string list = 1; }
message CTPRspSusbcribeMarketData {}
message CTPReqUnSusbibeMarketData { repeated string list = 1; }
message CTPRspUnSusbibeMarketData {}

// 发单错误返回
message CTPOnRspOrderInsert {
  int32 error_id = 1;
  bytes error_msg = 2;
  string order_ref = 3;
}

// 合约信息
message CTPInstrumentField {
  ///合约代码
  string instrument_id = 1;
  ///交易所代码
  string exchange_id = 2;
  ///合约名称
  bytes instrument_name = 3;
  ///合约在交易所的代码
  string exchange_inst_id = 4;
  ///产品代码
  string product_id = 5;
  ///产品类型
  int32 product_class = 6;
  ///交割年份
  int32 delivery_year = 7;
  ///交割月
  int32 delivery_month = 8;
  ///市价单最大下单量
  int32 max_market_order_volume = 9;
  ///市价单最小下单量
  int32 min_market_order_volume = 10;
  ///限价单最大下单量
  int32 max_limit_order_volume = 11;
  ///限价单最小下单量
  int32 min_limit_order_volume = 12;
  ///合约数量乘数
  int32 volume_multiple = 13;
  ///最小变动价位
  double price_tick = 14;
  ///创建日
  string create_date = 15;
  ///上市日
  string open_date = 16;
  ///到期日
  string expire_date = 17;
  ///开始交割日
  string start_deliv_date = 18;
  ///结束交割日
  string end_deliv_date = 19;
  ///合约生命周期状态
  int32 inst_life_phase = 20;
  ///当前是否交易
  bool is_trading = 30;
  ///持仓类型
  int32 position_type = 31;
  ///持仓日期类型
  int32 position_date_type = 32;
  ///多头保证金率
  double long_margin_ratio = 33;
  ///空头保证金率
  double short_margin_ratio = 34;
  ///是否使用大额单边保证金算法
  bool max_margin_side_algorithm = 35;
  ///基础商品代码
  string underlying_inst_id = 36;
  ///执行价
  double strike_price = 37;
  ///期权类型
  int32 options_type = 38;
  ///合约基础商品乘数
  int32 underlying_multiple = 39;
  ///组合类型
  int32 combination_type = 40;
}

message CTPOnRspQryInstrument {
  CTPInstrumentField inst = 1;
  CTPRspInfo response = 2;
}